syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

// TextGenerationInput represents the input of text generation task
message TextGenerationInput {
  // The prompt text
  string prompt = 1 [ (google.api.field_behavior) = REQUIRED ];
  // The maximum number of tokens for model to generate
  optional int64 output_len = 2 [ (google.api.field_behavior) = OPTIONAL ];
  // The words not to avoid being generated by the model
  optional string bad_words_list = 3 [ (google.api.field_behavior) = OPTIONAL ];
  // The trigger words to stop generation
  optional string stop_words_list = 4 [ (google.api.field_behavior) = OPTIONAL ];
  // Top k for sampling
  optional int64 topk = 5 [ (google.api.field_behavior) = OPTIONAL ];
  // The seed
  optional int64 seed = 6 [ (google.api.field_behavior) = OPTIONAL ];
}

// TextGenerationOutput represents the output of text generation task
message TextGenerationOutput {
  // The text generated by the model
  string text = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
