syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

// TextToImageInput represents the input of text to image task
message TextToImageInput {
  // The prompt text
  string prompt = 1 [ (google.api.field_behavior) = REQUIRED ];
  // The steps, default is 5
  optional int64 steps = 2 [ (google.api.field_behavior) = OPTIONAL ];
  // The guidance scale, default is 7.5
  optional float cfg_scale = 3 [ (google.api.field_behavior) = OPTIONAL ];
  // The seed, default is 0
  optional int64 seed = 4 [ (google.api.field_behavior) = OPTIONAL ];
  // The number of generated samples, default is 1
  optional int64 samples = 5 [(google.api.field_behavior) = OPTIONAL ];
}

// TextToImageOutput represents the output of text to image task
message TextToImageOutput {
  // List of generated images
  repeated string images = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
